Dev : update NEED FURTHER PERMIT to NEED SURVEY

--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
                         const distanceToHook = calculateDistance(hp.latitude, hp.longitude, closestHook.latitude, closestHook.longitude);
                         if (distanceToHook < 50) {
                             newHpData.Clamp_Hook_ID = closestHook.name;
-                            newHpData.HOUSE_COMMENT_ = 'NEED FURTHER PERMIT';
+                            newHpData.HOUSE_COMMENT_ = 'NEED SURVEY';
                         }
                     }
 
